--- a/AI_TicTacToe/nbproject/project.properties
+++ b/AI_TicTacToe/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Maze.BFSGraphicalMaze
+main.class=Main.launcher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
